--- a/nuspec/EShyMedia.MvvmCross.Plugins.Settings.nuspec
+++ b/nuspec/EShyMedia.MvvmCross.Plugins.Settings.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>EShyMedia.MvvmCross.Plugins.Settings</id>
-        <version>2.0.4</version>
+        <version>2.10-beta1</version>
         <title>EShyMedia.MvvmCross.Plugins.Settings</title>
         <authors>Ishai Hachlili</authors>
         <owners>Ishai Hachlili</owners>
@@ -10,39 +10,41 @@
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <description>An MvvmCross settings and secured settings plugin</description>
 		<releaseNotes>
-		2.04 - Updated to MvvmCross 4.2
-		</releaseNotes>
+      2.10 - Enum bug fix in WindowsCommon, Updated to MvvmCross 4.2.3
+      2.06 - portable nuspec fix
+      2.04 - Updated to MvvmCross 4.2
+    </releaseNotes>
         <tags>MvvmCross</tags>
         <dependencies>
 			<group targetFramework ="net">
-				<dependency id="MvvmCross.Platform" version="4.2.0" />
+				<dependency id="MvvmCross.Platform" version="4.2.3" />
 			</group>
 			<group targetFramework ="win">
-				<dependency id="MvvmCross.Platform" version="4.2.0" />
+				<dependency id="MvvmCross.Platform" version="4.2.3" />
 			</group>
 			<group targetFramework ="wp">
-				<dependency id="MvvmCross.Platform" version="4.2.0" />
+				<dependency id="MvvmCross.Platform" version="4.2.3" />
 			</group>
 			<group targetFramework ="wpa">
-				<dependency id="MvvmCross.Platform" version="4.2.0" />
+				<dependency id="MvvmCross.Platform" version="4.2.3" />
 			</group>
 			<group targetFramework ="MonoAndroid">
-				<dependency id="MvvmCross.Platform" version="4.2.0" />
+				<dependency id="MvvmCross.Platform" version="4.2.3" />
 			</group>
 			<group targetFramework ="MonoTouch">
-				<dependency id="MvvmCross.Platform" version="4.2.0" />
+				<dependency id="MvvmCross.Platform" version="4.2.3" />
 			</group>
-			<group targetFramework ="Xamarin.iOS">
-				<dependency id="MvvmCross.Platform" version="4.2.0" />
+			<group targetFramework ="Xamarin.iOS10">
+				<dependency id="MvvmCross.Platform" version="4.2.3" />
 			</group>
-			<group targetFramework ="portable-net45+win8+wpa81+wp8">
-				<dependency id="MvvmCross.Platform" version="4.2.0" />
+			<group targetFramework ="portable45-net45+win8+wp8+wpa81">
+				<dependency id="MvvmCross.Platform" version="4.2.3" />
 			</group>
 			<group targetFramework ="uap">
-				<dependency id="MvvmCross.Platform" version="4.2.0" />
+				<dependency id="MvvmCross.Platform" version="4.2.3" />
 			</group>
 			<group targetFramework ="dotnet">
-				<dependency id="MvvmCross.Platform" version="4.2.0" />
+				<dependency id="MvvmCross.Platform" version="4.2.3" />
 			</group>		
         </dependencies>
     </metadata>
@@ -50,8 +52,8 @@
 
 	
 		<!-- PCL -->
-    <file src="..\Release\Mvx\Portable\EShyMedia.MvvmCross.Plugins.Settings.*" target="lib\portable-net45+win8+wpa81+wp8\EShyMedia.MvvmCross.Plugins.Settings.dll" />
-		<file src="Settings.cs.pp" target="content\portable-net45+win8+wpa81+wp8\Helpers\Settings.cs.pp" />
+    <file src="..\Release\Mvx\Portable\EShyMedia.MvvmCross.Plugins.Settings.*" target="lib\portable45-net45+win8+wp8+wpa81\EShyMedia.MvvmCross.Plugins.Settings.dll" />
+		<file src="Settings.cs.pp" target="content\portable45-net45+win8+wp8+wpa81\Helpers\Settings.cs.pp" />
 
 		<!-- dotnet -->
 		<file src="..\Release\Mvx\Portable\EShyMedia.MvvmCross.Plugins.Settings.*" target="lib\dotnet" />
